# rust-grpc-trpc-hono

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  package.json  pnpm-workspace.yaml
apps/generator/: Cargo.toml
apps/generator/src/: main.rs
apps/generator/src/app/: config.rs
apps/ingester/: Cargo.toml
apps/ingester/config/: dev.toml  prod.toml
apps/ingester/src/: main.rs
apps/ingester/src/app/: config.rs  db.rs  handlers.rs  mod.rs  repositories.rs  services.rs
apps/ingester/src/feature/post/: entity.rs  handler.rs  repository.rs  service.rs
apps/ingester/src/server/grpc/: mod.rs  servergrpc.rs
apps/ts-api/: .env  Dockerfile  package.json
apps/ts-api/.husky/: pre-commit
apps/ts-api/src/: db.ts  index.ts
apps/ts-api/src/db/: index.ts
apps/ts-api/src/db/schema/: post.ts
apps/ts-api/src/repository/: post.ts  types.ts
apps/ts-api/src/routes/: app.ts
migrations/clickhouse/: 20250405190419_posts.sql
migrations/postgres/: 20250406225930_posts.sql
proto/: posts.proto
src/: index.ts
src/routes/: app.ts
