[workspace]
resolver = "2"
members = ["apps/ingester", "apps/generator", "packages/rust-deps/proto"]

[workspace.dependencies]
tonic = "0.13.0"
prost = "0.13.5"
tokio = { version = "1.44.2", features = ["full"] }
prost-types = "0.13.5"
tonic-build = "0.13.0"
clickhouse = { version = "0.13.2", features = ["lz4"] }
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8.20"
mimalloc = { version = "0.1.45" }
jemallocator = { version = "0.5.4" }
fake = { version = "4.2.0", features = ["derive", "chrono"] }
dotenvy = "0.15.7"
