[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
mimalloc.workspace = true
proto = { path = "../../packages/rust-deps/proto" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator.workspace = true
