[package]
name = "ingester"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
clickhouse.workspace = true
chrono.workspace = true
regex.workspace = true
toml.workspace = true
mimalloc.workspace = true
serde.workspace =true
dotenvy.workspace =true
proto = { path = "../../packages/rust-deps/proto" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator.workspace = true
